...
        </Text>
        <View className="gap-2">
          <Button
            label={t('settings:home.hydration')}
            variant="secondary"
            onPress={() => navigation.navigate('HydrationTracker', {})}
            testID="settings-more-home.hydration-button"
          />
          <Button
            label={t('settings:home.fasting')}
            variant="secondary"
            onPress={() => navigation.navigate('FastingTracker', {})}
            testID="settings-more-home.fasting-button"
...
